// Copyright 2022 MatrixOrigin.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package metadata; 
option go_package = "github.com/matrixorigin/matrixone/pkg/pb/metadata";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

// DN dn shard metadata
message DN {
    // ID the id of the DN. The ID is not modified after the DN is created.
    uint64 id         = 1 [(gogoproto.customname) = "ID"];
    // ReplicaID only one replica for one DN. The ReplicaID is specified at
    // the time the DN is created. DN restart ReplicaID will not change, when 
    // a DN is migrated to another node, the ReplicaID will be reset.
    uint64 replicaID  = 2;
    // LogShardID a DN corresponds to a unique Shard of LogService.
    uint64 logShardID = 3;
    // Start A DN manages data within a range [Start, end)
    bytes  start      = 4;
    // End A DN manages data within a range [Start, end)
    bytes  end        = 5;
    // Address DN external service address.
    string address    = 6;
}
